Se completa galeria de portafolio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portafolio">Portafolio</a>
+                        <a class="nav-link" href="galeria.html">Portafolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contacto">Contacto</a>
@@ -54,7 +54,7 @@
                             Creativo y apasionado tatuador de 29 años, residente en la ciudad de Pasto, Nariño, Colombia. Cuento con más de 10 años de experiencia en el arte del tatuaje, destacándome por mi habilidad para crear diseños originales tanto de forma manual como digital. Me caracteriza la creatividad, la atención al detalle y el gusto por transformar las ideas de mis clientes en obras únicas sobre la piel.
                         </p>
                         <div class="d-flex gap-3 flex-wrap">
-                            <a href="#portafolio" class="btn btn-custom-primary">Ver Portafolio</a>
+                            <a href="galeria.html" class="btn btn-custom-primary">Ver Portafolio</a>
                             <a href="#contacto" class="btn btn-custom-secondary">Contactar</a>
                         </div>
                     </div>
