--- a/galeria.html
+++ b/galeria.html
@@ -38,6 +38,9 @@
                         <a class="nav-link active" href="galeria.html">Portafolio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="videos.html">Videos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
