--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <a class="nav-link" href="galeria.html">Portafolio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="videos.html">Videos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
