--- a/videos.html
+++ b/videos.html
@@ -41,6 +41,9 @@
                         <a class="nav-link active" href="videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="biografia.html">Biografía</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
