--- a/biografia.html
+++ b/biografia.html
@@ -44,7 +44,7 @@
                         <a class="nav-link active" href="biografia.html">Biografía</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
