--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="biografia.html">Biografía</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
